feat: add functionality

--- a/src/components/Register/Register.module.scss
+++ b/src/components/Register/Register.module.scss
@@ -1,7 +1,11 @@
-.form{
-    display:flex;
-    flex-direction: column;
+.form {
+  display: flex;
+  flex-direction: column;
 }
-.link{
-color: #ADD8E6,
+.link {
+  color: #add8e6;
+  text-decoration: none;
+  font-size: 12px;
+  line-height: 1.55;
+  font-family: 'Montserrat';
 }
