--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @import-normalize; /* bring in normalize.css styles */
 
-body {
+body h1 h2 h3 h4 h5 h6 {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
